# t2s-metrics

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  codemeta.json  example_dataset.jsonl  pyproject.toml  pytest.ini  requirements.txt  setup.py
datasets/ck25/eval/: IIS-L.jsonl  IIS-Q.jsonl  INFAI.jsonl  MIPT.jsonl  WSE.jsonl
datasets/ck25/kg/: Qleverfile  Qleverfile-ui.yml  ck25.index-log.txt  ck25.index.ops  ck25.index.osp  ck25.index.patterns  ck25.index.pos  ck25.index.pso  ck25.index.sop  ck25.index.spo  ck25.internal.index.pos  ck25.internal.index.pso  ck25.meta-data.json  ck25.server-log.txt  ck25.ui-db.sqlite3  ck25.vocabulary.codebooks  ck25.vocabulary.words.external  ck25.vocabulary.words.external.offsets  ck25.vocabulary.words.internal  ck25.vocabulary.words.internal.ids
datasets/ck25/utils/: mapping_eval.py
datasets/example/eval/: example.jsonl
datasets/example/kg/: example.ttl
docs/: conf.py  index.md  requirements.txt
docs/api/: cli.md  index.md  python_api.md
docs/developer_guide/: architecture.md  contributing.md  extending_metrics.md  index.md
docs/getting_started/: index.md  installation.md  project_layout.md
docs/user_guides/: advanced_usage.md  basic_workflow.md  dashboard_and_exports.md  index.md
res/ck25/: AIFB.jsonl  FRANZ.jsonl  LABIC.jsonl  LACODAM.jsonl
res/datasets/ck25/: dataset.ttl
t2smetrics/: cli.py  dashboard_plotly.py  dashboard_plotly_static.py  run_example.py  run_experiments.py  run_pathological_benchmark.py  run_text2sparql.py
t2smetrics/aggregation/: aggregator.py
t2smetrics/core/: context.py  dataset.py  engine.py  eval.py  experiment.py  export.py  logging.py  result.py
t2smetrics/execution/: answer_normalization.py  base.py  rdflib_backend.py  result_utils.py  sparql_endpoint_backend.py
t2smetrics/llm/: base.py  dummy_backend.py  ollama_backend.py
t2smetrics/measures/: base.py  canonical.py  distance.py  exact.py  llm_judge.py  query_execution.py  text_metrics.py  token.py
t2smetrics/measures/answer_set/: base.py  f1.py  f1_qald.py  f1_spinach.py  hit_at_5.py  hit_at_k.py  mrr.py  ndcg.py  p_at_1.py  p_at_k.py  precision.py  precision_qald.py  recall.py  recall_qald.py
t2smetrics/measures/codebleu/: codebleu.py  dataflow.py  weighted_bleu.py
t2smetrics/metrics/: __init__.py  base.py  distance.py  exact.py  llm_judge.py  metrics_utils.py  query_execution.py  text_metrics.py  token.py
t2smetrics/metrics/answer_set/: base.py  (+12 more)
t2smetrics/representation/: preprocessing.py  sparql_query.py  tokenizer.py  uri_utils.py
test/: helpers.py  test_metrics.py
(+19 files in other folders)
